plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.kcs'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Database
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'mysql:mysql-connector-java:8.0.32'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.3.2'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Spring
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // lang3
    implementation 'org.apache.commons:commons-lang3:3.12.0'

    // Apache HttpClient
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'
    implementation 'org.apache.httpcomponents.core5:httpcore5:5.2.4'

    // Bouncy Castle
    implementation 'org.bouncycastle:bcprov-jdk18on:1.75'

    // Jasypt
    implementation group: 'org.jasypt', name: 'jasypt', version: '1.9.2'

    //kubernetes client
    // https://mvnrepository.com/artifact/io.kubernetes/client-java-extended
    implementation 'io.kubernetes:client-java-extended:20.0.1'

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.2.4'

    // https://mvnrepository.com/artifact/org.springframework.session/spring-session-data-redis
    implementation group: 'org.springframework.session', name: 'spring-session-data-redis', version: '3.2.2'

    // aws sdk
    // https://mvnrepository.com/artifact/software.amazon.awssdk/eks
    implementation group: 'software.amazon.awssdk', name: 'eks', version: '2.25.56'
    // https://mvnrepository.com/artifact/software.amazon.awssdk/sts
    implementation group: 'software.amazon.awssdk', name: 'sts', version: '2.25.56'
    // https://mvnrepository.com/artifact/software.amazon.awssdk/ec2
    implementation group: 'software.amazon.awssdk', name: 'ec2', version: '2.25.56'

}

tasks.named('test') {
    useJUnitPlatform()
}
